k8s/custom-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: kafka-nginx
  name: kafka-nginx-controller
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kafka-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kafka-nginx
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: controller
          image: torben96/nginx-example
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 90Mi
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app.kubernetes.io/name: kafka-nginx
  name: kafka-nginx-controller
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: kafka-nginx
