k8s/store-app.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: store-app
  labels:
    name: store-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: store-app
  template:
    metadata:
      labels:
        app: store-app
    spec:
      containers:
        - name: store-app
          image: torben96/kafka-store:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          args:
            - --input-topics=loadtest
            - --brokers=k8s-kafka:9092
            - --schema-registry-url=http://k8s-schema-registry:8081
          resources:
            requests:
              memory: 500Mi
              cpu: 0.3
            limits:
              memory: 500Mi
              cpu: 0.3
---
kind: Service
apiVersion: v1
metadata:
  name: store-app
  labels:
    app: store-app
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: store-app
  type: ClusterIP
